--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.0.0-beta.4" }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.0.0-beta.6", features = ["api-all"] }
+tauri = { version = "1.0.0-beta.6", features = ["api-all", "fs-all", "fs-create-dir", "fs-read-text-file", "fs-write-file"] }
 
 [features]
 default = [ "custom-protocol" ]
