--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.21.0",
     "react-scripts": "^4.0.3",
     "react-tabs": "^3.2.2",
     "typescript": "^4.3.5",
