Use Chakra UI components for layout and styling (#8)

--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.15",
+    "@chakra-ui/react": "^1.6.7",
+    "@chakra-ui/theme-tools": "^1.2.0",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@tauri-apps/api": "^1.0.0-beta.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -11,9 +16,11 @@
     "@types/node": "^12.20.19",
     "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.9",
+    "framer-motion": "^4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.21.0",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "^4.0.3",
     "react-tabs": "^3.2.2",
     "typescript": "^4.3.5",
@@ -48,6 +55,7 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.0.0-beta.8",
+    "@types/react-router-dom": "^5.1.8",
     "@types/react-tabs": "^2.3.3",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
