--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Desktop client for browsing and connecting to Sargassum networks"
 authors = ["Ethan Li"]
 license = "Apache-2.0 OR BlueOak-1.0.0"
-repository = ""
+repository = "https://github.com/prakashlab/latreutes"
 default-run = "latreutes"
 edition = "2018"
 build = "src/build.rs"
@@ -18,6 +18,7 @@ tauri-build = { version = "1.0.0-beta.4" }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.0.0-beta.6", features = ["api-all", "fs-all", "fs-create-dir", "fs-read-text-file", "fs-write-file"] }
+trust-dns-resolver = { version = "0.20.3", features = ["dns-over-rustls"] }
 
 [features]
 default = [ "custom-protocol" ]
