--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^12.20.19",
     "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.9",
+    "formik": "^2.2.9",
     "framer-motion": "^4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -26,6 +27,7 @@
     "react-scripts": "^4.0.3",
     "react-tabs": "^3.2.2",
     "typescript": "^4.3.5",
+    "validator": "^13.6.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -59,6 +61,7 @@
     "@tauri-apps/cli": "^1.0.0-beta.8",
     "@types/react-router-dom": "^5.1.8",
     "@types/react-tabs": "^2.3.3",
+    "@types/validator": "^13.6.3",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "eslint": "^7.2.0",
