Add command and button for copying the authtoken file on Linux

--- a/.github/workflows/build-tauri-app.yml
+++ b/.github/workflows/build-tauri-app.yml
@@ -75,7 +75,7 @@ jobs:
     - name: Upload the build artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: bundle-amd64-${{ matrix.platform }}
+        name: latreutes-bundle-amd64-${{ matrix.platform }}
         path: |
           src-tauri/target/release/bundle/*
           !src-tauri/target/release/bundle/appimage/latreutes.AppDir/
