--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "latreutes"
 version = "0.1.0"
-description = "Desktop client for browsing and connecting to Sargassum networks"
+description = "Desktop application for browsing and connecting to ZeroTier and Sargassum networks"
 authors = [ "Ethan Li" ]
 license = "Apache-2.0 OR BlueOak-1.0.0"
 repository = "https://github.com/prakashlab/latreutes"
