--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.15",
+    "@chakra-ui/react": "^1.6.7",
+    "@chakra-ui/theme-tools": "^1.2.0",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@fontsource/atkinson-hyperlegible": "^4.5.1",
+    "@fontsource/oxygen-mono": "^4.5.0",
     "@tauri-apps/api": "^1.0.0-beta.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -11,18 +18,26 @@
     "@types/node": "^12.20.19",
     "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.9",
+    "formik": "^2.2.9",
+    "framer-motion": "^4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.21.0",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "^4.0.3",
+    "react-tabs": "^3.2.2",
     "typescript": "^4.3.5",
+    "validator": "^13.6.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "BROWSER=none react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "lint": "tsc --noEmit && eslint src/**/*.ts{,x}",
+    "lint:fix": "tsc --noEmit && eslint src/**/*.ts{,x} --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +59,22 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.0.0-beta.8",
+    "@types/react-router-dom": "^5.1.8",
+    "@types/react-tabs": "^2.3.3",
+    "@types/validator": "^13.6.3",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^14.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jest": "^24.4.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "prettier": "^2.3.2",
     "react-app-rewired": "^2.1.8"
   }
 }
