--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,23 +1,22 @@
 [package]
 name = "latreutes"
 version = "0.1.0"
-description = "Desktop client for browsing and connecting to Sargassum networks"
-authors = ["Ethan Li"]
+description = "Desktop application for browsing and connecting to ZeroTier and Sargassum networks"
+authors = [ "Ethan Li" ]
 license = "Apache-2.0 OR BlueOak-1.0.0"
-repository = ""
+repository = "https://github.com/prakashlab/latreutes"
 default-run = "latreutes"
 edition = "2018"
 build = "src/build.rs"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
 tauri-build = { version = "1.0.0-beta.4" }
 
 [dependencies]
 serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.0.0-beta.6", features = ["api-all"] }
+serde = { version = "1.0", features = [ "derive" ] }
+tauri = { version = "1.0.0-beta.8", features = ["fs-all", "fs-read-text-file", "http-all", "http-request", "path-all", "shell-all"] }
+trust-dns-resolver = { version = "0.20.3", features = [ "dns-over-rustls" ] }
 
 [features]
 default = [ "custom-protocol" ]
