--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@
 /.pnp
 .pnp.js
 
-# testing
-/coverage
+# build
+/public/build/
 
 # production
 /build
@@ -18,6 +18,7 @@
 .env.test.local
 .env.production.local
 
+# package managers
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
