--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-svelte3": "^3.2.1",
+    "node-sass": "^6.0.1",
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
     "rollup": "^2.3.4",
@@ -33,6 +34,7 @@
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
     "svelte-check": "^2.0.0",
+    "svelte-dark-mode": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
     "tslib": "^2.0.0",
     "typescript": "^4.0.0"
@@ -42,7 +44,6 @@
     "@fontsource/oxygen-mono": "^4.5.0",
     "@sveltestack/svelte-query": "^1.4.1",
     "@tauri-apps/api": "^1.0.0-beta.8",
-    "node-sass": "^6.0.1",
     "sirv-cli": "^1.0.0",
     "svelte-routing": "^1.6.0"
   }
