--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@fontsource/oxygen-mono": "^4.5.0",
     "@sveltestack/svelte-query": "^1.4.1",
     "@tauri-apps/api": "^1.0.0-beta.8",
+    "rollup-plugin-copy": "^3.4.0",
     "sirv-cli": "^1.0.0",
     "svelte-routing": "^1.6.0"
   }
