--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint:fix": "tsc --noEmit && prettier --write ./src/**/*.{js,svelte,html,ts} && eslint --fix src/**/*.{js,ts,svelte}"
   },
   "devDependencies": {
+    "@mdi/js": "^6.1.95",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/plugin-typescript": "^8.0.0",
@@ -24,6 +25,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-svelte3": "^3.2.1",
+    "mdi-svelte": "^1.1.2",
     "node-sass": "^6.0.1",
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
@@ -40,6 +42,7 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
+    "@carbon/icons": "^10.37.0",
     "@fontsource/atkinson-hyperlegible": "^4.5.1",
     "@fontsource/oxygen-mono": "^4.5.0",
     "@sveltestack/svelte-query": "^1.4.1",
