--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     "noEmit": true,
     "importsNotUsedAsValues": "remove"
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules/*", "__sapper__/*", "public/*"]
+  "include": ["src/**/*", "node_modules/@tauri-apps/**/*"],
+  "exclude": ["__sapper__/*", "public/*"]
 }
