--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@rollup/plugin-typescript": "^8.0.0",
     "@tauri-apps/cli": "^1.0.0-beta.10",
     "@tsconfig/svelte": "^2.0.0",
+    "@types/validator": "^13.6.3",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "bulma": "^0.9.3",
@@ -35,6 +36,7 @@
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
+    "svelte-accessible-accordion": "^2.0.0",
     "svelte-check": "^2.0.0",
     "svelte-dark-mode": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
@@ -49,6 +51,7 @@
     "@tauri-apps/api": "^1.0.0-beta.8",
     "rollup-plugin-copy": "^3.4.0",
     "sirv-cli": "^1.0.0",
-    "svelte-routing": "^1.6.0"
+    "svelte-routing": "^1.6.0",
+    "validator": "^13.6.0"
   }
 }
