--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,7 +15,7 @@ tauri-build = { version = "1.0.0-beta.4" }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = [ "derive" ] }
-tauri = { version = "1.0.0-beta.8", features = ["fs-all", "fs-read-text-file", "http-all", "http-request", "path-all", "shell-all"] }
+tauri = { version = "1.0.0-beta.8", features = ["fs-all", "fs-read-text-file", "http-all", "http-request", "os-all", "path-all", "shell-all"] }
 trust-dns-resolver = { version = "0.20.3", features = [ "dns-over-rustls" ] }
 
 [features]
