--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
     "svelte-accessible-accordion": "^2.0.0",
+    "svelte-accessible-dialog": "^2.1.3",
     "svelte-check": "^2.0.0",
     "svelte-dark-mode": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
