--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
     "svelte-accessible-accordion": "^2.0.0",
-    "svelte-accessible-dialog": "^2.1.3",
     "svelte-check": "^2.0.0",
     "svelte-dark-mode": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
@@ -46,10 +45,12 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
+    "@felte/reporter-svelte": "^0.3.16",
     "@fontsource/atkinson-hyperlegible": "^4.5.1",
     "@fontsource/oxygen-mono": "^4.5.0",
     "@sveltestack/svelte-query": "^1.4.1",
     "@tauri-apps/api": "^1.0.0-beta.8",
+    "felte": "^0.8.3",
     "sirv-cli": "^1.0.0",
     "svelte-routing": "^1.6.0",
     "validator": "^13.6.0"
