--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,9 @@
       "dom.iterable",
       "esnext"
     ],
+    "typeRoots": [
+      "./types",
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
