--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "latreutes"
-version = "0.2.0"
+version = "0.2.1"
 description = "Desktop application for browsing and connecting to ZeroTier and Sargassum networks"
 authors = [ "Ethan Li" ]
 license = "Apache-2.0 OR BlueOak-1.0.0"
@@ -10,13 +10,13 @@ edition = "2018"
 build = "src/build.rs"
 
 [build-dependencies]
-tauri-build = { version = "1.0.0-beta.4" }
+tauri-build = { version = "1.0.0-rc.4", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = [ "derive" ] }
-tauri = { version = "1.0.0-beta.8", features = ["fs-all", "fs-read-text-file", "http-all", "http-request", "os-all", "path-all", "shell-all"] }
-trust-dns-resolver = { version = "0.20.3", features = [ "dns-over-rustls" ] }
+tauri = { version = "1.0.0-rc.4", features = ["fs-all", "http-all", "os-all", "path-all", "shell-all"] }
+trust-dns-resolver = { version = "0.21.1", features = [ "dns-over-rustls" ] }
 
 [features]
 default = [ "custom-protocol" ]
