--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "@tsconfig/svelte/tsconfig.json",
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
     "lib": [
       "dom",
       "dom.iterable",
@@ -24,6 +24,6 @@
     "noEmit": true,
     "importsNotUsedAsValues": "remove"
   },
-  "include": ["src/**/*", "node_modules/@tauri-apps/**/*"],
+  "include": ["src/**/*", "node_modules/@tauri-apps/api/**/*"],
   "exclude": ["__sapper__/*", "public/*"]
 }
