Update cargo tauri flags for the arm64 build

--- a/.github/workflows/build-tauri-app.yml
+++ b/.github/workflows/build-tauri-app.yml
@@ -149,7 +149,7 @@ jobs:
           echo "Run bundle build"
           # Note: right now tauri's appimage.sh is hardcoded to build AppImages
           # against x86_64, so we can't build AppImage bundles for ARM.
-          REMOVE_TRANSFORM_ANIMATIONS=1 cargo tauri build --bundle deb
+          REMOVE_TRANSFORM_ANIMATIONS=1 cargo tauri build --bundles deb
     - name: Upload the build artifacts
       uses: actions/upload-artifact@v2
       with:
