Fix error in the use of the rust-cache action

--- a/.github/workflows/build-tauri-app.yml
+++ b/.github/workflows/build-tauri-app.yml
@@ -72,7 +72,8 @@ jobs:
       run: yarn --prefer-offline
     - name: Use rust cache
       uses: Swatinem/rust-cache@v1
-      working-directory: src-tauri
+      with:
+        working-directory: src-tauri
     - name: Run the release build
       run: |
         echo "Print tauri info"
