--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "latreutes",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "private": true,
   "scripts": {
     "build": "rollup -c",
@@ -14,47 +14,50 @@
     "lint:fix": "tsc --noEmit && prettier --write ./src/**/*.{js,svelte,html,ts} && eslint --fix src/**/*.{js,ts,svelte}"
   },
   "devDependencies": {
-    "@mdi/js": "^6.1.95",
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
-    "@rollup/plugin-typescript": "^8.0.0",
-    "@tauri-apps/cli": "^1.0.0-beta.10",
-    "@tsconfig/svelte": "^2.0.0",
-    "@types/validator": "^13.6.3",
-    "@typescript-eslint/eslint-plugin": "^4.29.3",
-    "@typescript-eslint/parser": "^4.29.3",
+    "@mdi/js": "^6.5.95",
+    "@rollup/plugin-commonjs": "^21.0.2",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-typescript": "^8.3.1",
+    "@sargassum-world/styles": "^0.2.1",
+    "@tauri-apps/cli": "^1.0.0-rc.7",
+    "@tsconfig/svelte": "^3.0.0",
+    "@types/validator": "^13.7.1",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
     "bulma": "^0.9.3",
-    "eslint": "^7.32.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-svelte3": "^3.2.1",
+    "eslint": "^8.10.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-svelte3": "^3.4.1",
     "mdi-svelte": "^1.1.2",
-    "node-sass": "^6.0.1",
-    "prettier": "^2.4.1",
-    "prettier-plugin-svelte": "^2.4.0",
-    "rollup": "^2.3.4",
+    "node-sass": "^7.0.1",
+    "prettier": "^2.5.1",
+    "prettier-plugin-svelte": "^2.6.0",
+    "rollup": "^2.70.0",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-re": "^1.0.7",
-    "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0",
-    "svelte-accessible-accordion": "^2.0.0",
-    "svelte-check": "^2.2.7",
-    "svelte-dark-mode": "^2.0.0",
-    "svelte-preprocess": "^4.0.0",
-    "tslib": "^2.0.0",
-    "typescript": "^4.0.0"
+    "rollup-plugin-scss": "^3.0.0",
+    "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "sass": "^1.49.9",
+    "sirv-cli": "^2.0.2",
+    "svelte": "^3.46.4",
+    "svelte-accessible-accordion": "^2.1.0",
+    "svelte-check": "^2.4.5",
+    "svelte-dark-mode": "^2.1.0",
+    "svelte-preprocess": "^4.10.4",
+    "tslib": "^2.3.1",
+    "typescript": "^4.6.2"
   },
   "dependencies": {
-    "@felte/reporter-svelte": "^0.3.16",
-    "@fontsource/atkinson-hyperlegible": "^4.5.1",
-    "@fontsource/oxygen-mono": "^4.5.0",
-    "@sveltestack/svelte-query": "^1.4.1",
-    "@tauri-apps/api": "^1.0.0-beta.8",
-    "felte": "^0.8.3",
-    "sirv-cli": "^1.0.0",
+    "@felte/reporter-svelte": "^1.0.2",
+    "@fontsource/atkinson-hyperlegible": "^4.5.3",
+    "@fontsource/oxygen-mono": "^4.5.3",
+    "@sveltestack/svelte-query": "^1.6.0",
+    "@tauri-apps/api": "^1.0.0-rc.2",
+    "felte": "^1.1.1",
     "svelte-routing": "^1.6.0",
-    "validator": "^13.6.0"
+    "validator": "^13.7.0"
   }
 }
